--- a/www/Feature.css
+++ b/www/Feature.css
@@ -1,14 +1,14 @@
-.skin-blue .main-header>.navbar {
+.skin-black .main-header>.navbar {
 background-color: #ffb6c1;
 }
 .content-wrapper,.right-side {
 background-color: white;
 }
-.skin-blue .main-header .logo {
+.skin-black .main-header .logo {
 background-color: #ffb6c1;
 color: white;
 }
-.skin-blue .main-header .logo:hover {
+.skin-black .main-header .logo:hover {
 background-color: black;
 }
 aside.main-sidebar {
@@ -34,7 +34,20 @@ font-size: 13px;
     color: white;
 }
 
-#gameMessage {
+.grow:hover
+{
+        -webkit-transform: scale(1.3);
+        -ms-transform: scale(1.3);
+        transform: scale(1.3);
+}
+
+.circle:hover
+{
+        border-radius:50%;
+}
+
+#gameMessage 
+{
   font-family: "Georgia", Times, "Times New Roman", serif;
 font-weight: bold;
 font-size: 15px;
